@@ -1,3 +1,5 @@
+######## 2016-02-14 ########
+alter table flashsale_xlmm_nine_pic add column description varchar(1024) default null ;
 ######## 2016-02-03 ########
 alter table shop_weixin_unionid add column modified datetime NOT NULL;
 
